--- a/nginx/conf.d/laravel.conf
+++ b/nginx/conf.d/laravel.conf
@@ -4,6 +4,10 @@ server {
     root            /usr/share/nginx/html/public;
     index           index.html index.php;
 
+    add_header      X-Frame-Options "SAMEORIGIN";
+    add_header      X-XSS-Protection "1; mode=block";
+    add_header      X-Content-Type-Options "nosniff";
+
     location ~ \.php$ {
         fastcgi_pass    php:9000;
         fastcgi_index   index.php;
