:wrench: set the charset to utf8

--- a/nginx/conf.d/laravel.conf
+++ b/nginx/conf.d/laravel.conf
@@ -8,6 +8,8 @@ server {
     add_header      X-XSS-Protection "1; mode=block";
     add_header      X-Content-Type-Options "nosniff";
 
+    charset         utf-8;
+
     location ~ \.php$ {
         fastcgi_pass    php:9000;
         fastcgi_index   index.php;
