:wrench: denying access to the configuration files

--- a/nginx/conf.d/laravel.conf
+++ b/nginx/conf.d/laravel.conf
@@ -16,4 +16,8 @@ server {
         fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include         fastcgi_params;
     }
+
+    location ~ /\.(?!well-known).* {
+        deny all;
+    }
 }
