--- a/nginx/conf.d/laravel.conf
+++ b/nginx/conf.d/laravel.conf
@@ -10,6 +10,10 @@ server {
 
     charset         utf-8;
 
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
     location ~ \.php$ {
         fastcgi_pass    php:9000;
         fastcgi_index   index.php;
