--- a/nginx/conf.d/laravel.conf
+++ b/nginx/conf.d/laravel.conf
@@ -1,5 +1,5 @@
 server {
-    listen          80 default_server;
+    listen          80;
     server_name     localhost 127.0.0.1 laravel.local www.laravel.local;
     root            /usr/share/nginx/html/public;
     index           index.html index.php;
@@ -9,6 +9,8 @@ server {
     add_header      X-Content-Type-Options "nosniff";
 
     charset         utf-8;
+
+    more_clear_headers "Server";
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
