--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,5 +46,7 @@ services:
     depends_on:
       - postgres
     image: adminer
+    environment:
+      ADMINER_DEFAULT_SERVER: postgres
     ports:
       - 8080:8080
