--- a/nginx/conf.d/laravel.conf
+++ b/nginx/conf.d/laravel.conf
@@ -1,4 +1,13 @@
 server {
+    listen 80;
+    server_name 127.0.0.1 localhost database.laravel.local;
+
+    location / {
+        proxy_pass http://adminer:8080;
+    }
+}
+
+server {
     listen          80;
     server_name     localhost 127.0.0.1 laravel.local www.laravel.local;
     root            /usr/share/nginx/html/public;
