:sparkles: enabled compressed responses

--- a/nginx/conf.d/laravel.conf
+++ b/nginx/conf.d/laravel.conf
@@ -8,18 +8,26 @@ server {
 }
 
 server {
-    listen          80;
-    server_name     localhost 127.0.0.1 laravel.local www.laravel.local;
-    root            /usr/share/nginx/html/public;
-    index           index.html index.php;
+    listen              80;
 
-    add_header      X-Frame-Options "SAMEORIGIN";
-    add_header      X-XSS-Protection "1; mode=block";
-    add_header      X-Content-Type-Options "nosniff";
+    server_name         localhost 127.0.0.1 laravel.local www.laravel.local;
 
-    charset         utf-8;
+    root                /usr/share/nginx/html/public;
 
-    more_clear_headers "Server";
+    index               index.html index.php;
+
+    add_header          X-Frame-Options "SAMEORIGIN";
+    add_header          X-XSS-Protection "1; mode=block";
+    add_header          X-Content-Type-Options "nosniff";
+
+    charset             utf-8;
+
+    more_clear_headers  "Server";
+
+    gzip on;
+    gzip_comp_level 9;
+    gzip_min_length 0;
+    gzip_types text/plain text/html application/javascript text/css application/json application/xml;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
